--- a/css/contact.css
+++ b/css/contact.css
@@ -1,48 +1,38 @@
 body {
     margin: 0;
-    
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
     padding: 0;
-    width: 15%;
-    background-color: #f1f1f1;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
+    box-sizing: border-box;
+    font-family: "roboto", sans-serif;
 }
 
- li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
+.main-content {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background: black;
 }
 
-li a.active {
-    background-color: #003838;
-    color: white;
-}
-
-li a:hover:not(.active) {
-    background-color: #555;
-    color: white;
+.about-us {
+    position: absolute;
+    width: 80vw;
+    height: 80%;
+    background: white;
 }
 
 h1 {
     color:#00ACEE;
     text-transform:uppercase;
 }
-span{
+
+span {
     color: red;
 }
+
 p.wlc_message{
-    font-family: 'Courier New', Courier, monospace;
     font-size: small;
     color:#00ACEE;
 }
+
 fieldset{
   border: 5px solid #00ACEE;
   width: 250px;
@@ -53,15 +43,18 @@ fieldset{
   color: black;
   
 }
-div{
+.contact-us{
     text-align: center;
+    margin: 10% 20px;
+    padding:1px 16px;
+    height: 500px;
 }
 
-form
-{
+form {
     color:beige;
     text-align: center;
 }
+
 legend{
     font-size:120%;
     color: #00ACEE;
