--- a/css/nav.css
+++ b/css/nav.css
@@ -87,6 +87,7 @@
   
   .link {
     text-transform: capitalize;
+    font-size: 18px;
     padding: 0px 10px;
     margin: 0px 5px;
     text-decoration: none;
