--- a/css/signup.css
+++ b/css/signup.css
@@ -12,6 +12,12 @@
     align-items: center;
     background: #f5f5f5;
     font-family: 'roboto', sans-serif;
+    background-image: url('../img/photo-1578932750294-f5075e85f44a.jpeg');
+    height: 100%; 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.8;
   }
   
   .loader {
@@ -46,10 +52,11 @@
     outline: none;
     margin: 20px 0;
     text-transform: capitalize;
-    color: #383838;
+    color: black;
     font-size: 14px;
     box-shadow: 2px 5px rgba(0, 0, 0, 0.2);;
     font-family: 'roboto', sans-serif;
+    font-weight: bold;
   }
   
   ::placeholder {
@@ -69,11 +76,12 @@
     cursor: pointer;
     display: block;
     margin: 30px 0;
+    font-weight: bold;
   }
 
   .submit-btn:hover {
     color: #fff;
-    background: #383838;
+    background: white;
   }
   
   /* checkbox styles */
@@ -86,6 +94,7 @@
     border-radius: 2px;
     border: 1px solid #383838;
     cursor: pointer;
+    
   }
   
   .checkbox:checked {
@@ -105,6 +114,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     display: none;
+    font-weight: bold;
   }
   
   .checkbox:checked::after {
@@ -117,14 +127,17 @@
     display: inline-block;
     margin-bottom: 10px;
     font-size: 14px;
-    color: #383838;
+    color: white;
+
   }
   
   label a {
-    color: #383838;
+    color: white;
+    font-weight: bold;
   }
   
   .link {
+    font-weight: bold;
     color: #00ACEE;
     text-transform: capitalize;
     text-align: center;
@@ -169,3 +182,12 @@
     line-height: 30px;
     font-weight: 500;
   }
+
+  .container{
+    font-weight: bold;
+  
+  }
+
+
+    
+  
