--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -12,8 +12,59 @@
   border-radius: 50%;
 }
 
-.about-us-desc{
+.about-us-desc {
   margin-left: 70px;
   line-height: 2;
- 
+}
+
+.contact-us {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10% 20px;
+  padding:1px 16px;
+  height: 500px;
+}
+
+h1 {
+  color:#383838;
+  font-family: roboto, Courier, monospace;
+}
+
+span {
+  color: red;
+}
+
+p .wlc-message {
+  font-size: small;
+  color:#00ACEE;
+}
+
+.contact-us-form {
+  width: 70%;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+legend {
+  font-size: 24px;
+}
+
+textarea {
+  resize: none;
+}
+
+input[type=submit] {
+  color:white;
+  background: #00ACEE;
+  width: 20%;
+  height:40px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+input[type=submit]:hover {
+  color:white;
+  background: #00b7ffc0;
 }
