--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -15,6 +15,7 @@
 .about-us-desc {
   margin-left: 70px;
   line-height: 2;
+  
 }
 
 .contact-us {
@@ -28,7 +29,7 @@
 
 h1 {
   color:#383838;
-  font-family: roboto, Courier, monospace;
+  font-family: "roboto", Courier, monospace;
 }
 
 span {
@@ -43,8 +44,10 @@ p .wlc-message {
 .contact-us-form {
   width: 70%;
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: #87CEEB;
   padding: 20px;
+  font-weight: 150;
+
 }
 
 legend {
@@ -53,11 +56,14 @@ legend {
 
 textarea {
   resize: none;
+  border-radius: 5px;
+  color:black
 }
 
 input[type=submit] {
   color:white;
-  background: #00ACEE;
+  border-radius: 5px;
+  background: #383838;
   width: 20%;
   height:40px;
   text-align: center;
@@ -66,5 +72,10 @@ input[type=submit] {
 
 input[type=submit]:hover {
   color:white;
-  background: #00b7ffc0;
+  background: #494949;
+}
+
+p{
+  font-family: Arial, Helvetica, sans-serif ;
+  font-size: 30;
 }
