--- a/css/viewproduct.css
+++ b/css/viewproduct.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Poppins', sans-serif; 
+}
+
 .product-details{
     width:100%;
     padding:60px 10vw;
@@ -42,6 +46,7 @@
 
 .details{
     width:50%;
+    border-bottom: 5px solid #383838;
 }
 
 .details .product-brand{
@@ -50,10 +55,15 @@
 }
 
 .details .product-short-des{
-    font-size:25px;
+    font-size: 25px;
     line-height: 30px;
-    height:auto;
+    height: auto;
     margin: 15px 0 30px;
+}
+
+.product-rating {
+    font-weight: 500;;
+    font-size: 30px;
 }
 
 .product-price{
@@ -77,9 +87,12 @@
 .product-sub-heading{
     font-size:30px;
     text-transform: uppercase;
-    margin:60px 0;
+    margin: 40px 0 0 0;
     font-weight:300;
+}
 
+.sizes {
+    margin-top: 20px;;
 }
 
 .size-radio-btn{
@@ -101,25 +114,21 @@
 .size-radio-btn.check{
     background:#383838;
     color:#fff;
-
 }
 
 .btn{
     width:48%;
     padding:20px;
-    border-radius: 5px;
+    border-radius: 9px;
     background: none;
-    border:1px solid #383838;
-    color:#383838;
+    border:1px solid;
     font-size:20px;
     cursor:pointer;
     margin: 20px 0;
     text-transform: capitalize;
-
 }
 
 .cart-btn{
-    margin-right:2%;
     background:#00ACEE;
     color:#fff;
 }
@@ -131,15 +140,150 @@
 .detail-des{
     padding: 0 10vw;
     text-transform: capitalize;
-
 }
 
 .heading{
     font-size:30px;
-    margin-bottom:30px;
+    margin-bottom:10px;
 }
 
 .des{
     color: #383838;
     line-height: 50px;
+}
+
+#reviews{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width:100%;
+    margin-top: 10px;
+}
+
+.review-heading{
+    letter-spacing: 1px;
+    margin: 30px 0px;
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.review-heading span{
+    font-size: 1.5rem;
+    color: #252525;
+    margin-bottom: 10px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+#review-link {
+    font-size: 0.9rem;
+}
+
+.review-box-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width:100%;
+}
+
+.review-box{
+    width:500px;
+    box-shadow: 2px 2px 30px rgba(0,0,0,0.1);
+    background-color: #ffffff;
+    padding: 20px;
+    margin: 15px;
+    cursor: pointer;
+}
+
+.profile-img{
+    width:50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 10px;
+}
+
+.profile-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.profile{
+    display: flex;
+    align-items: center;
+}
+
+.name-user{
+    display: flex;
+    flex-direction: column;
+}
+
+.name-user strong{
+    color: #3d3d3d;
+    font-size: 1.1rem;
+    letter-spacing: 0.5px;
+}
+
+.name-user span{
+    color: #979797;
+    font-size: 0.8rem;
+}
+
+.reviews{
+    color: #00ACEE;
+}
+
+.box-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.client-comment p{
+    font-size: 0.9rem;
+    color: #4b4b4b;
+}
+
+.review-box:hover{
+    transform: translateY(-10px);
+    transition: all ease 0.3s;
+}
+ 
+@media(max-width:1060px){
+    .review-box{
+        width:45%;
+        padding: 10px;
+    }
+}
+
+@media(max-width:790px){
+    .review-box{
+        width:100%;
+    }
+    .review-heading h1{
+        font-size: 1.4rem;
+    }
+}
+
+@media(max-width:340px){
+    .box-top{
+        flex-wrap: wrap;
+        margin-bottom: 10px;
+    }
+    .reviews{
+        margin-top: 10px;
+    }
+}
+
+::selection{
+    color: #ffffff;
+    background-color: #252525;
 }
