--- a/css/viewproduct.css
+++ b/css/viewproduct.css
@@ -58,12 +58,18 @@ body {
     font-size: 25px;
     line-height: 30px;
     height: auto;
-    margin: 15px 0 30px;
+    margin: 15px 0 0;
+}
+
+.details .divider {
+    border-top: 3px solid #00ACEE;
+    width: 10%;
+    margin: 10px 0 15px 0;
 }
 
 .product-rating {
     font-weight: 500;;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .product-price{
