--- a/css/searchproduct.css
+++ b/css/searchproduct.css
@@ -1,6 +1,21 @@
-.search-results{
-    width:100%;
+.main-content {
+    display: flex;
     padding:60px 0;
+}
+
+.category-filter {
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
+    font-size: 20px;
+}
+
+.category-filter p {
+    margin-top: 10px;
+}
+
+.category-filter a {
+    margin: 10px 0 0 13px;
 }
 
 .heading{
@@ -13,12 +28,21 @@
 
 .heading span{
     font-weight:700;
-
 }
 
 .product-container{
-    display:grid;
-    grid-template-columns:repeat(4,1fr);
-    height:auto;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    height: auto;
     grid-row-gap: 40px;
+}
+
+.radio-male-female{
+    color:#00AACE
+    
+}
+
+.radio-mf{
+    color:white;
+    background-color: black;
 }
