--- a/css/searchproduct.css
+++ b/css/searchproduct.css
@@ -1,196 +1,199 @@
 body {
-    font-family: Poppins, sans-serif;
+  font-family: Poppins, sans-serif;
 }
 
 .main-content {
-    display: flex;
-    padding:60px 70px;
-}
-
-.radio-mf{
-    color: white;
-    background-color: black;
+  display: flex;
+  padding: 60px 40px;
 }
 
 .category-menu {
-    display: flex;
-    flex-direction: column;
-    margin-left: 40px;
-    font-size: 20px;
-}
-
-.search-results {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  padding-left: 100px;
 }
 
 .category-menu p {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .category-menu a {
-    margin: 10px 0 0 13px;
-    text-decoration: none;
-    color: #383838;
-    opacity: 0.5;
-    transition: 0.5s;
+  margin: 10px 0 0 13px;
+  text-decoration: none;
+  color: #383838;
+  opacity: 0.5;
+  transition: 0.5s;
 }
 
 .category-menu a:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .category-list {
-    list-style: none;
+  list-style: none;
 }
 
-.heading{
-    font-size: 20px;
-    text-transform: capitalize;
-    font-weight: 400;
-    margin-bottom: 40px;
-    padding: 0 10vw;
+.heading {
+  font-size: 20px;
+  text-transform: capitalize;
+  font-weight: 400;
+  margin-bottom: 40px;
+  padding: 0 5vw;
 }
 
-.heading span{
-    font-weight: 700;
+.heading span {
+  font-weight: 700;
 }
 
-.product-container{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    height: auto;
-    grid-row-gap: 40px;
+.product-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  height: auto;
+  grid-row-gap: 40px;
+  overflow: hidden;
+  padding: 5px 5vw;
 }
 
-.radio-male-female{
-    color: #00AACE
-    
+.radio-male-female {
+  color: #00aace;
 }
 
-::selection{
-    color: #fff;
-    background: #17A2B8;
+::selection {
+  color: #fff;
+  background: #17a2b8;
 }
 
 .wrapper {
-    width: 400px;
-    background: #fff;
-    border-radius: 10px;
-    padding: 20px 25px 40px;
-    box-shadow: 0 12px 35px rgba(0,0,0,0.1);
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px 25px 40px;
+  box-shadow: 0 12px 35px rgba(0, 0, 0, 0.1);
 }
+
 header h2 {
-    font-size: 24px;
-    font-weight: 600;
+  font-size: 24px;
+  font-weight: 600;
 }
+
 header p {
-    margin-top: 5px;
-    font-size: 16px;
+  margin-top: 5px;
+  font-size: 16px;
 }
-.price-input{
-width: 100%;
-display: flex;
-margin: 30px 0 35px;
+
+.price-input {
+  width: 100%;
+  display: flex;
+  margin: 30px 0 35px;
 }
-.price-input .field{
-display: flex;
-width: 100%;
-height: 45px;
-align-items: center;
+
+.price-input .field {
+  display: flex;
+  width: 100%;
+  height: 45px;
+  align-items: center;
 }
-.field input{
-width: 100%;
-height: 100%;
-outline: none;
-font-size: 19px;
-margin-left: 12px;
-border-radius: 5px;
-text-align: center;
-border: 1px solid #999;
--moz-appearance: textfield;
+
+.field input {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  font-size: 19px;
+  margin-left: 12px;
+  border-radius: 5px;
+  text-align: center;
+  border: 1px solid #999;
+  -moz-appearance: textfield;
 }
+
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
--webkit-appearance: none;
+  -webkit-appearance: none;
 }
-.price-input .separator{
-width: 130px;
-display: flex;
-font-size: 19px;
-align-items: center;
-justify-content: center;
+
+.price-input .separator {
+  width: 130px;
+  display: flex;
+  font-size: 19px;
+  align-items: center;
+  justify-content: center;
 }
-.slider{
-height: 5px;
-position: relative;
-background: #ddd;
-border-radius: 5px;
+
+.slider {
+  height: 5px;
+  position: relative;
+  background: #ddd;
+  border-radius: 5px;
 }
-.slider .progress{
-height: 100%;
-left: 25%;
-right: 25%;
-position: absolute;
-border-radius: 5px;
-background: #17A2B8;
+
+.slider .progress {
+  height: 100%;
+  left: 0%;
+  right: 0%;
+  position: absolute;
+  border-radius: 5px;
+  background: #17a2b8;
 }
-.range-input{
-position: relative;
+
+.range-input {
+  position: relative;
 }
-.range-input input{
-position: absolute;
-width: 100%;
-height: 5px;
-top: -5px;
-background: none;
-pointer-events: none;
--webkit-appearance: none;
--moz-appearance: none;
+
+.range-input input {
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  top: -5px;
+  background: none;
+  pointer-events: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
-input[type="range"]::-webkit-slider-thumb{
-height: 17px;
-width: 17px;
-border-radius: 50%;
-background: #17A2B8;
-pointer-events: auto;
--webkit-appearance: none;
-box-shadow: 0 0 6px rgba(0,0,0,0.05);
+
+input[type="range"]::-webkit-slider-thumb {
+  height: 17px;
+  width: 17px;
+  border-radius: 50%;
+  background: #17a2b8;
+  pointer-events: auto;
+  -webkit-appearance: none;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
 }
-input[type="range"]::-moz-range-thumb{
-height: 17px;
-width: 17px;
-border: none;
-border-radius: 50%;
-background: #17A2B8;
-pointer-events: auto;
--moz-appearance: none;
-box-shadow: 0 0 6px rgba(0,0,0,0.05);
+
+input[type="range"]::-moz-range-thumb {
+  height: 17px;
+  width: 17px;
+  border: none;
+  border-radius: 50%;
+  background: #17a2b8;
+  pointer-events: auto;
+  -moz-appearance: none;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
 }
 
 .submit-btn {
-    text-align: center;
+  text-align: center;
 }
 
-input[type=submit]{
-    text-align: center;
-    color:white;
-    border-radius: 5px;
-    background: #00ACEE;
-    width: 20%;
-    height:40px;
-    margin-top: 10px;
+input[type="submit"] {
+  text-align: center;
+  color: white;
+  border-radius: 5px;
+  background: #00acee;
+  width: 20%;
+  height: 40px;
+  margin-top: 10px;
 }
-    
-input[type=submit]:hover {
-    color:white;
-    background: #383838;
-}    
 
-.choose-category{
-    margin-top: 20px;
-    width: 400px;
-    background: #fff;
-    border-radius: 10px;
-    padding: 20px 25px 40px;
-    box-shadow: 0 12px 35px rgba(0,0,0,0.1);
+input[type="submit"]:hover {
+  color: white;
+  background: #383838;
 }
-    
+
+.choose-category {
+  margin-top: 20px;
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px 25px 40px;
+  box-shadow: 0 12px 35px rgba(0, 0, 0, 0.1);
+}
