--- a/css/searchproduct.css
+++ b/css/searchproduct.css
@@ -189,6 +189,7 @@ input[type="submit"] {
 input[type="submit"]:hover {
   color: white;
   background: #383838;
+  transition: 0.5s;
 }
 
 .choose-category {
