--- a/css/searchproduct.css
+++ b/css/searchproduct.css
@@ -172,7 +172,7 @@ input[type="range"]::-moz-range-thumb {
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
 }
 
-.submit-btn {
+.filter-btn {
   text-align: center;
 }
 
