--- a/css/cart.css
+++ b/css/cart.css
@@ -10,8 +10,10 @@ body {
 
 .wrapper {
   max-width: 1000px;
-  margin: 0 auto;
-  
+  padding: 25px;
+  margin: 25px auto 70px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
 }
 
 .wrapper h1 {
@@ -145,6 +147,10 @@ body {
 .right-bar .shop-link:hover {
   background-color: #00ACEE;
 	transition: 0.5s;
+}
+
+.subtotal, .tax, .total {
+  text-align: right;
 }
 
 @media screen and (max-width: 700px) {
